--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
         </activity>
         <activity android:name=".Vista.PedidoActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan"
+            android:launchMode="singleTop">
         </activity>
+        <activity android:name=".Vista.LectorActivity"/>
     </application>
 
 </manifest>
